--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,70 @@
-<div class="container">
+
+
+<div class="container" *ngIf="weatherData">
+  <div class="upper-data">
+    <img src="../assets/images/day.jpg" alt="day" *ngIf=" weatherData.main.temp > 25">
+    <img src="../assets/images/night.jpg" alt="night" *ngIf=" weatherData.main.temp <= 25" >
+
+    <div class="weather-data">
+      <div class="search">
+        <form #form ="ngForm" (submit) = "onSubmit()">
+          <input type="text " placeholder="Search city" name="city" [(ngModel)]=" cityName"/>
+        </form>
+      </div>
+      <div class="location">{{weatherData.name}}</div>
+      <div class="temperature">{{((weatherData.main.temp)-32)/1.8 | number: '1.0-0'}}°C</div>
+    </div>
+
+  </div>
+  <div class="lower-data">
+    <div class="more-info-label">
+      More Information
+    </div>
+    <div class="more-info-container">
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/images/cool.png" alt=""/>
+          <span>min</span>
+        </div>
+          <div class="info-block-value">
+            {{((weatherData.main.temp_min)-32)/1.8 | number: '1.0-0'}}°C
+          </div>
+       
+      </div>
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/images/hot.png" alt=""/>
+          <span>max</span>
+        </div>
+          <div class="info-block-value">
+            {{((weatherData.main.temp_max)-32)/1.8 | number: '1.0-0'}}°C
+          </div>
+       
+      </div>
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/images/taindrop.png" alt="" style="width: 1.2em; margin-bottom: 5px"/>
+          <span>humidity </span>
+        </div>
+          <div class="info-block-value">
+            {{weatherData.main.humidity }}%
+          </div>
+        
+      </div>
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/images/wind.png" alt=""/>
+          <span>wind</span>
+        </div>
+          <div class="info-block-value">
+           {{weatherData.wind.speed}}km/h
+          </div>
+       
+      </div>
+    </div>
+  </div>
+</div>
+<!-- <div class="container">
   <div class="upper-data">
     <img src="../assets/images/day.jpg" alt="day" *ngIf=" 14>15">
     <img src="../assets/images/night.jpg" alt="night" *ngIf=" 14<=15" >
@@ -56,4 +122,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
