--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
   --blue-2: #4c52ad;
   --yellow-1: #fac742;
   --white: #fff;
-  --grey-1: #ededed;
+  --grey-1: #fef7f7;
   --shadow-dark: rgba(0, 0, 0, 0.3);
   --shadow-light: rgba(155, 255, 255, 0.1);
 }
@@ -141,4 +141,24 @@ body {
   margin-top: 50px;
   margin-right: 20px;
   box-shadow: inset 3px 3px 3px var(--shadow-dark);
+}
+
+.search {
+  margin-bottom: 1em ;
+  text-align: center;
+
+}
+.search input {
+  background-color: var(--shadow-light);
+  outline: none;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  padding: 1em;
+  color: var(--white);
+  font-size: 0.8em;
+  text-align: center;
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgb(244, 223, 223);
+  opacity: 1; /* Firefox */
 }
